loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:7: error: illegal start of simple expression
} while() 
        ^Poucet2:9: error: ')' expected but '}' found.
	}
        ^